# pre-commit-sbt

./: .pre-commit-hooks.yaml  README.md  requirements.txt  setup.cfg
pre_commit_hooks/: common.py  compile.py  scalafmt.py  scalastyle.py  scapegoat.py  util.py
