[mypy]
python_version = 3.8
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

[options]
packages = find:
install_requires =
    colorama==0.4.3
    sbt_client @ git+https://github.com/anivanch/sbt-client-py#egg=sbt_client
python_requires = >=3.7

[options.entry_points]
console_scripts =
    sbt-scalafmt = pre_commit_hooks.scalafmt:main
